--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "antd": "^4.1.4",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "react": "^16.13.1",
