--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "antd": "^4.1.4",
+    "@types/sprintf-js": "^1.1.2",
+    "antd": "^4.2.3",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "react": "^16.13.1",
@@ -22,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
+    "sprintf-js": "^1.1.2",
     "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
   },
