--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
 		"dbaeumer.vscode-eslint",
 		"ms-vscode.vscode-typescript-tslint-plugin",
 		"eamodio.gitlens",
+		"esbenp.prettier-vscode",
 		"github.vscode-pull-request-github"
 
 	],
