--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/history": "^4.7.5",
     "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.4"
+    "@types/react-router-dom": "^5.1.4",
+    "redux-saga-test-plan": "^4.0.0-rc.3"
   }
 }
