--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,10 +27,10 @@ jobs:
           node-version: "12"
       - name: Install dependencies
         run: yarn install
-      - name: Build
-        run: yarn build
       - name: Test
         run: yarn test
         env:
           CI: true
           RUN_SLOW_TESTS: true
+#      - name: Build
+#        run: yarn build
