--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.3.3",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
+    "json-url": "^2.6.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
