--- a/package.json
+++ b/package.json
@@ -3,21 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/lodash": "^4.14.152",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/sprintf-js": "^1.1.2",
     "antd": "^4.3.3",
     "connected-react-router": "^6.8.0",
+    "copy-to-clipboard": "^3.3.1",
     "history": "^4.10.1",
     "json-url": "^2.6.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
@@ -53,6 +46,16 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.152",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.34",
+    "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-dom": "^16.9.6",
+    "@types/sprintf-js": "^1.1.2",
     "@types/history": "^4.7.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
