--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,11 +11,13 @@
     "editor.tabSize": 2,
     "editor.formatOnSave": true,
     "[typescript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode",
       "editor.codeActionsOnSave": {
         "source.organizeImports": true
       }
     },
     "[typescriptreact]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode",
       "editor.codeActionsOnSave": {
         "source.organizeImports": true
       }
