--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "history": "^4.10.1",
     "json-url": "^2.6.0",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
@@ -49,16 +50,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.152",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.34",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.6",
-    "@types/sprintf-js": "^1.1.2",
-    "@types/history": "^4.7.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
+    "@types/sprintf-js": "^1.1.2",
     "redux-saga-test-plan": "^4.0.0-rc.3"
   }
 }
