--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^4.3.3",
+    "antd": "^4.3.5",
+    "array-move": "^2.2.2",
     "connected-react-router": "^6.8.0",
     "copy-to-clipboard": "^3.3.1",
     "history": "^4.10.1",
+    "immutability-helper": "^3.1.1",
     "json-url": "^2.6.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-sortable-hoc": "^1.11.0",
     "recoil": "^0.0.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
