--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
