--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^4.4.1",
+    "antd": "^4.4.2",
     "array-move": "^2.2.2",
     "connected-react-router": "^6.8.0",
     "copy-to-clipboard": "^3.3.1",
@@ -13,6 +13,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
@@ -60,6 +61,7 @@
     "@types/lodash": "^4.14.152",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.34",
+    "@types/react-color": "^3.0.4",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
