--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^4.4.2",
+    "antd": "^4.4.3",
     "array-move": "^2.2.2",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "copy-to-clipboard": "^3.3.1",
     "history": "^4.10.1",
     "immutability-helper": "^3.1.1",
     "json-url": "^2.6.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
@@ -56,6 +57,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.152",
