--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build
         run: yarn build
         env:
-          CI: true
+          CI: false
       - name: Copy to docker
         run: cp -r build/ docker/build
       - name: Build and push docker image
