--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
 #REACT_APP_BASE_URL=http://localhost:18080/irsdk
 #REACT_APP_BASE_URL=https://irsdk.juelps.de
 #REACT_APP_BASE_URL=http://localhost:8082/irsdk
-REACT_APP_BASE_URL=http://localhost:8080
+REACT_APP_BASE_URL=http://host.docker.internal:8080
+REACT_APP_AUTH_URL=http://host.docker.internal:8180/auth
 
 #REACT_APP_MY_REDIRECT_URL=
 REACT_APP_MY_REDIRECT_URL=http://localhost:3000/oauth2/redirect
