--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-keycloak/web": "^3.4.0",
+    "@types/uuid": "^8.3.0",
     "antd": "^4.5.1",
     "array-move": "^2.2.2",
     "classnames": "^2.2.6",
@@ -11,6 +13,7 @@
     "history": "^4.10.1",
     "immutability-helper": "^3.1.1",
     "json-url": "^2.6.0",
+    "keycloak-js": "^11.0.2",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "react": "^16.13.1",
@@ -30,7 +33,8 @@
     "redux-saga": "^1.1.3",
     "sprintf-js": "^1.1.2",
     "typesafe-actions": "^5.1.0",
-    "typescript": "~3.9.6"
+    "typescript": "~3.9.6",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
