--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.0",
     "react-sortable-hoc": "^1.11.0",
     "recoil": "^0.0.7",
     "redux": "^4.0.5",
@@ -73,6 +73,6 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "@types/sprintf-js": "^1.1.2",
-    "redux-saga-test-plan": "^4.0.0-rc.3"
+    "redux-saga-test-plan": "^4.0.0"
   }
 }
