Umstellung auf Test-Keycloak-Instanz

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,9 @@
 #REACT_APP_BASE_URL=https://irsdk.juelps.de
 #REACT_APP_BASE_URL=http://localhost:8082/irsdk
 REACT_APP_BASE_URL=http://host.docker.internal:8080
-REACT_APP_AUTH_URL=http://host.docker.internal:8180/auth
+REACT_APP_AUTH_URL=https://auth-test.juelps.de/auth
+REACT_APP_AUTH_REALM=iracing-tools-test
+REACT_APP_AUTH_CLIENT=login-web-docker
 
 #REACT_APP_MY_REDIRECT_URL=
 REACT_APP_MY_REDIRECT_URL=http://localhost:3000/oauth2/redirect
