--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
-# to be changed!
+# 
 REACT_APP_BASE_URL=https://istint-backend.juelps.de
-REACT_APP_MY_REDIRECT_URL=https://istint.juelps.de/oauth2/redirect
+REACT_APP_AUTH_URL=https://auth.juelps.de/auth
+REACT_APP_AUTH_REALM=iracing-tools
+REACT_APP_AUTH_CLIENT=login-web
