--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
+    "@types/react-highlight-words": "^0.16.1",
     "@types/uuid": "^8.3.0",
-    "antd": "^4.8.2",
+    "antd": "^4.8.4",
     "array-move": "^3.0.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
@@ -22,6 +23,7 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.14.0",
+    "react-highlight-words": "^0.16.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.2.0",
