--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
-    "antd": "^4.19.4",
+    "antd": "^4.20.2",
     "array-move": "^4.0.0",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.3.1",
@@ -13,21 +13,21 @@
     "json-url": "^3.0.0",
     "keycloak-js": "^17.0.1",
     "lodash": "^4.17.21",
-    "moment": "^2.29.2",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-color": "^2.18.1",
-    "react-copy-to-clipboard": "^5.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dnd": "^15.1.2",
     "react-dnd-html5-backend": "^15.1.3",
     "react-dom": "^17.0.2",
-    "react-highlight-words": "^0.17.0",
+    "react-highlight-words": "^0.18.0",
     "react-redux": "^7.2.8",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "5.0.1",
     "react-sortable-hoc": "^2.0.0",
-    "recoil": "^0.7.0",
-    "redux": "^4.0.5",
+    "recoil": "^0.7.2",
+    "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "sprintf-js": "^1.1.2",
@@ -36,23 +36,26 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^14.0.4",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "@types/classnames": "^2.3.1",
     "@types/history": "^5.0.0",
     "@types/jest": "^27.4.1",
-    "@types/lodash": "^4.14.180",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.43",
     "@types/react-color": "^3.0.6",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.14",
     "@types/react-highlight-words": "^0.16.1",
-    "@types/react-redux": "^7.1.23",
+    "@types/react-redux": "^7.1.24",
     "@types/sprintf-js": "^1.1.2",
     "@types/uuid": "^8.3.0",
     "redux-saga-test-plan": "^4.0.4"
+  },
+  "resolutions": {
+    "nth-check": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
