--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 #REACT_APP_BASE_URL=https://irsdk.juelps.de
 #REACT_APP_BASE_URL=http://localhost:8082/irsdk
 REACT_APP_BASE_URL=http://host.docker.internal:8080
-REACT_APP_AUTH_URL=https://auth-test.juelps.de/auth
+REACT_APP_AUTH_URL=https://auth-test.juelps.de
 REACT_APP_AUTH_REALM=iracing-tools-test
 REACT_APP_AUTH_CLIENT=login-web
 
