chg: adjust for keycloak server 20.x

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,9 @@
 # 
 REACT_APP_BASE_URL=https://istint-backend.juelps.de
-REACT_APP_AUTH_URL=https://auth.juelps.de/auth
+# use this with keycloak 16
+#REACT_APP_AUTH_URL=https://auth.juelps.de/auth
+# use this with keycloak >= 19
+REACT_APP_AUTH_URL=https://auth.juelps.de
+
 REACT_APP_AUTH_REALM=iracing-tools
 REACT_APP_AUTH_CLIENT=login-web
