--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,16 @@
 #REACT_APP_BASE_URL=http://localhost:18080/irsdk
 #REACT_APP_BASE_URL=https://irsdk.juelps.de
 #REACT_APP_BASE_URL=http://localhost:8082/irsdk
-REACT_APP_BASE_URL=http://host.docker.internal:8080
+REACT_APP_BASE_URL=http://localhost:8082
+#REACT_APP_BASE_URL=http://localhost:8080
+
+# use this with Keycloak 16
+#REACT_APP_AUTH_URL=https://auth-test.juelps.de/auth
+
+
+# use this with Keycloak 19+
 REACT_APP_AUTH_URL=https://auth-test.juelps.de
+
 REACT_APP_AUTH_REALM=iracing-tools-test
 REACT_APP_AUTH_CLIENT=login-web
 
