--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
-    "antd": "^4.23.2",
+    "antd": "^5.1.1",
     "array-move": "^4.0.0",
     "classnames": "^2.3.2",
-    "copy-to-clipboard": "^3.3.2",
+    "copy-to-clipboard": "^3.3.3",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
     "json-url": "^3.0.0",
-    "keycloak-js": "^19.0.2",
+    "keycloak-js": "^20.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -21,18 +21,18 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
-    "react-redux": "^8.0.4",
-    "react-router": "^6.4.1",
-    "react-router-dom": "^6.4.1",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-sortable-hoc": "^2.0.0",
-    "recoil": "^0.7.5",
+    "recoil": "^0.7.6",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.2.1",
+    "redux-saga": "^1.2.2",
     "sprintf-js": "^1.1.2",
+    "typed-redux-saga": "^1.5.0",
     "typesafe-actions": "^5.1.0",
-    "typescript": "~4.1.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -41,18 +41,19 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/classnames": "^2.3.1",
     "@types/history": "^5.0.0",
-    "@types/jest": "^27.4.1",
-    "@types/lodash": "^4.14.185",
-    "@types/node": "^16.11.11",
-    "@types/react": "^18.0.21",
+    "@types/jest": "^29.2.4",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
     "@types/react-color": "^3.0.6",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-dom": "^18.0.6",
+    "@types/react-dom": "^18.0.10",
     "@types/react-highlight-words": "^0.16.1",
     "@types/react-redux": "^7.1.24",
     "@types/sprintf-js": "^1.1.2",
-    "@types/uuid": "^8.3.0",
-    "redux-saga-test-plan": "^4.0.6"
+    "@types/uuid": "^9.0.0",
+    "redux-saga-test-plan": "^4.0.6",
+    "typescript": "~4.9.4"
   },
   "resolutions": {
     "nth-check": "^2.1.1"
