--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "typescript": "~5.0.4"
   },
   "resolutions": {
-    "nth-check": "^2.1.1"
+    "nth-check": "^2.1.1",
+    "webpack": "^5.76.0"
   },
   "scripts": {
     "start": "react-scripts start",
