Replace CRA with Vite Fixes #337

--- a/.env.development
+++ b/.env.development
@@ -1,18 +1,18 @@
-#REACT_APP_BASE_URL=http://localhost:18080/irsdk
-#REACT_APP_BASE_URL=https://irsdk.juelps.de
-#REACT_APP_BASE_URL=http://localhost:8082/irsdk
-REACT_APP_BASE_URL=http://localhost:8082
-#REACT_APP_BASE_URL=http://localhost:8080
+#VITE_BASE_URL=http://localhost:18080/irsdk
+#VITE_BASE_URL=https://irsdk.juelps.de
+#VITE_BASE_URL=http://localhost:8082/irsdk
+VITE_API_BASE_URL=http://localhost:8180
+#VITE_BASE_URL=http://localhost:8080
 
 # use this with Keycloak 16
-#REACT_APP_AUTH_URL=https://auth-test.juelps.de/auth
+#VITE_AUTH_URL=https://auth-test.juelps.de/auth
 
 
 # use this with Keycloak 19+
-REACT_APP_AUTH_URL=https://auth-test.juelps.de
+VITE_AUTH_URL=https://auth-test.juelps.de
 
-REACT_APP_AUTH_REALM=iracing-tools-test
-REACT_APP_AUTH_CLIENT=login-web
+VITE_AUTH_REALM=iracing-tools-test
+VITE_AUTH_CLIENT=login-web
 
-#REACT_APP_MY_REDIRECT_URL=
-REACT_APP_MY_REDIRECT_URL=http://localhost:3000/oauth2/redirect
+#VITE_MY_REDIRECT_URL=
+VITE_MY_REDIRECT_URL=http://localhost:3000/oauth2/redirect
