--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,9 @@
 # 
-REACT_APP_BASE_URL=https://istint-backend.juelps.de
+VITE_API_BASE_URL=https://istint-backend.juelps.de
 # use this with keycloak 16
-#REACT_APP_AUTH_URL=https://auth.juelps.de/auth
+#VITE_AUTH_URL=https://auth.juelps.de/auth
 # use this with keycloak >= 19
-REACT_APP_AUTH_URL=https://auth.juelps.de
+VITE_AUTH_URL=https://auth.juelps.de
 
-REACT_APP_AUTH_REALM=iracing-tools
-REACT_APP_AUTH_CLIENT=login-web
+VITE_AUTH_REALM=iracing-tools
+VITE_AUTH_CLIENT=login-web
