--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx
-COPY build/ /usr/share/nginx/html/
+COPY dist/ /usr/share/nginx/html/
 COPY my-default.conf /etc/nginx/conf.d/default.conf
