--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
     "react-sortable-hoc": "^2.0.0",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
@@ -41,7 +40,6 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/classnames": "^2.3.1",
     "@types/history": "^5.0.0",
-    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
@@ -52,18 +50,37 @@
     "@types/react-redux": "^7.1.25",
     "@types/sprintf-js": "^1.1.2",
     "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.30.0",
+    "c8": "^7.13.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "jsdom": "^21.1.1",
+    "prettier": "^2.8.7",
     "redux-saga-test-plan": "^4.0.6",
-    "typescript": "~5.0.4"
+    "typescript": "~5.0.4",
+    "vite": "^4.2.1",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.8",
+    "vitest": "^0.30.0"
   },
   "resolutions": {
     "nth-check": "^2.1.1",
     "webpack": "^5.76.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "test": "vitest watch",
+    "test:no-watch": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "tscBuild": "tsc && vite build",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
