--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
-    "antd": "^5.4.0",
+    "antd": "^5.4.6",
     "array-move": "^4.0.0",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
-    "json-url": "^3.0.0",
-    "keycloak-js": "^21.0.2",
+    "json-url": "^3.1.0",
+    "keycloak-js": "^21.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -22,8 +22,8 @@
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-redux": "^8.0.5",
-    "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0",
+    "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
     "react-sortable-hoc": "^2.0.0",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
@@ -40,38 +40,37 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/classnames": "^2.3.1",
     "@types/history": "^5.0.0",
-    "@types/lodash": "^4.14.192",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^18.16.4",
+    "@types/react": "^18.2.5",
     "@types/react-color": "^3.0.6",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-dom": "^18.0.11",
+    "@types/react-dom": "^18.2.4",
     "@types/react-highlight-words": "^0.16.1",
     "@types/react-redux": "^7.1.25",
     "@types/sprintf-js": "^1.1.2",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/coverage-c8": "^0.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-c8": "^0.31.0",
     "c8": "^7.13.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "jsdom": "^21.1.1",
-    "prettier": "^2.8.7",
+    "jsdom": "^22.0.0",
+    "prettier": "^2.8.8",
     "redux-saga-test-plan": "^4.0.6",
     "typescript": "~5.0.4",
-    "vite": "^4.2.1",
-    "vite-plugin-svgr": "^2.4.0",
-    "vite-tsconfig-paths": "^4.0.8",
-    "vitest": "^0.30.0"
+    "vite": "^4.3.5",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.0"
   },
   "resolutions": {
-    "nth-check": "^2.1.1",
-    "webpack": "^5.76.0"
+    "nth-check": "^2.1.1"
   },
   "scripts": {
     "start": "vite",
