--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,17 @@ updates:
         dependency-type: "production"
       development-dependencies:
         dependency-type: "development"
+
+  - package-ecosystem: github-actions
+    directory: /
+    labels:
+      - developer
+      - build
+    schedule:
+      interval: "weekly"
+    groups:
+      github-actions:
+        dependency-type: "production"
+    commit-message:
+      prefix: "build(gha): "
+      include: "scope"
